--- a/index.html
+++ b/index.html
@@ -8,5 +8,20 @@
   </head>
   <body>
     <!-- Your code here -->
+   <!--first img-->
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg";
+    />
+   <!--second image-->
+    <img
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg";
+    alt="lion laying down "
+    />
+    <!--third image-->
+    <img 
+    src="https://s3.amazonaws.com/ironboard-learn/lion.jpg";
+    alt="lion laying down "
+    title="King of jungle"
+    />
   </body>
 </html>
